--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -2,5 +2,9 @@
     "appTitle": "Appsolutely (ES)",
     "confirm": "Confirmar",
     "profileGreetings": "Hola, {name}",
+    "settings": "Ajustes",
+    "settingsDarkMode": "Modo Oscuro",
+    "settingsLanguage": "Idioma",
+    "settingsEnvironment": "Environment",
     "unknown": "Unknown"
 }
