update directory structure and add drawer + bottomnav

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,11 @@
 {
     "appTitle": "Appsolutely",
     "confirm": "Confirm",
+    "main": "Main",
+    "mainTab": "Main Tab",
+    "location": "Location",
+    "locationTab": "Location Tab",
+    "profile": "Profile",
     "profileGreetings": "Hello, {name}",
     "settings": "Settings",
     "settingsDarkMode": "Dark Mode",
