--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,6 +1,11 @@
 {
     "appTitle": "Appsolutely (ES)",
     "confirm": "Confirmar",
+    "main": "Main",
+    "mainTab": "Main Tab",
+    "location": "Location",
+    "locationTab": "Location Tab",
+    "profile": "Perfil",
     "profileGreetings": "Hola, {name}",
     "settings": "Ajustes",
     "settingsDarkMode": "Modo Oscuro",
